# communist

./: .gitignore  AuxFunc.cpp  AuxFunc.h  Communist.cpp  Communist.pot  CommunistApp.cpp  CommunistApp.h  DHTOperations.cpp  DHTOperations.h  FileReceiveOp.cpp  FileReceiveOp.h  FileSending.cpp  FileSending.h  LocalNetworkOp.cpp  LocalNetworkOp.h  MainWindow.cpp  MainWindow.h  MsgProfileReceive.cpp  MsgProfileReceive.h  MsgSending.cpp  MsgSending.h  NetworkOperations.cpp  NetworkOperations.h  README.md  README_RU.md  SettingsWindow.cpp  SettingsWindow.h  main.cpp  meson.build  ru.mail.bobilev_yury.Communist.desktop
.github/: FUNDING.yml
Communist/: Signal.flac  StunList  StunListres  Translations  mainWindow.css
Communist/HunDict/: languages
Communist/HunDict/1/: dic.aff
Communist/Translations.d/en_GB/: en_GB.dic
Communist/Translations.d/ru_RU/LC_MESSAGES/: Communist.mo  Communist.po
Communist/themes/default/: mainWindow.css
Communist/themes/soviet_star/: mainWindow.css
Communist/themes/system_default/: mainWindow.css
GUI/: meson.build
GUI/include/: AuxFunc.h  AuxWindows.h  ContactOperations.h  MWFileOperations.h  MWMsgOperations.h  MainWindow.h  SettingsWindow.h
GUI/src/: AuxFunc.cpp  AuxWindows.cpp  CommunistApp.cpp  ContactOperations.cpp  MWFileOperations.cpp  MWMsgOperations.cpp  MainWindow.cpp  SettingsWindow.cpp
include/: AuxFunc.h  AuxWindows.h  CommunistApp.h  ContactOperations.h  MWFileOperations.h  MWMsgOperations.h  MainWindow.h  SettingsWindow.h
po/: POTFILES  communist.pot  meson.build  ru.po
src/: AuxFunc.cpp  AuxWindows.cpp  Communist.cpp  CommunistApp.cpp  ContactOperations.cpp  MWFileOperations.cpp  MWMsgOperations.cpp  MainWindow.cpp  SettingsWindow.cpp  meson.build
subprojects/: libcommunist.wrap
